--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -556,7 +556,7 @@ set_real_ip_from 195.47.238.92;
 set_real_ip_from 195.47.238.93;
 set_real_ip_from 195.80.151.242;
 set_real_ip_from 195.88.74.206;
-set_real_ip_from 198.167.206.221;
+set_real_ip_from 198.167.206.220;
 set_real_ip_from 198.251.84.163;
 set_real_ip_from 198.251.84.237;
 set_real_ip_from 198.251.88.18;
@@ -927,7 +927,6 @@ set_real_ip_from 2.58.56.35;
 set_real_ip_from 2.58.56.43;
 set_real_ip_from 2.58.56.93;
 set_real_ip_from 2600:3c00::f03c:91ff:fe73:f9ba;
-set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c00::f03c:95ff:fe5d:8f00;
 set_real_ip_from 2600:3c03::f03c:95ff:fe5d:562;
 set_real_ip_from 2600:3c04::f03c:95ff:fe41:d42c;
@@ -1430,7 +1429,6 @@ set_real_ip_from 2a0e:97c0:3e3:460:1337:b20b:1337:9;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b30b:1337:10;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 set_real_ip_from 2a0e:97c0:3e3:a0e::1;
-set_real_ip_from 2a0e:97c0:3e3:b6::1;
 set_real_ip_from 2a0e:97c0:3ea:882::1;
 set_real_ip_from 2a0e:97c0:470::28;
 set_real_ip_from 2a0e:97c0:470::30;
@@ -1493,6 +1491,7 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:240;
 set_real_ip_from 2a12:a800:2:1:45:138:16:248;
 set_real_ip_from 2a12:a800:2:1:45:138:16:42;
 set_real_ip_from 2a12:a800:2:1:45:138:16:69;
+set_real_ip_from 2a12:a800:2:1:45:138:16:76;
 set_real_ip_from 2a12:a800:2:1:45:141:215:110;
 set_real_ip_from 2a12:a800:2:1:45:141:215:111;
 set_real_ip_from 2a12:a800:2:1:45:141:215:114;
@@ -1530,6 +1529,7 @@ set_real_ip_from 2c0f:6c0:0:d::d28b;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.184.236.104;
+set_real_ip_from 31.220.75.237;
 set_real_ip_from 31.44.238.25;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.114.50.124;
@@ -1556,7 +1556,6 @@ set_real_ip_from 38.135.25.142;
 set_real_ip_from 38.135.25.143;
 set_real_ip_from 38.135.25.144;
 set_real_ip_from 38.135.25.2;
-set_real_ip_from 38.242.254.131;
 set_real_ip_from 38.97.116.242;
 set_real_ip_from 38.97.116.243;
 set_real_ip_from 38.97.116.244;
@@ -1573,6 +1572,7 @@ set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.137.70.158;
 set_real_ip_from 45.138.16.107;
 set_real_ip_from 45.138.16.113;
+set_real_ip_from 45.138.16.161;
 set_real_ip_from 45.138.16.164;
 set_real_ip_from 45.138.16.222;
 set_real_ip_from 45.138.16.230;
@@ -1582,6 +1582,7 @@ set_real_ip_from 45.138.16.240;
 set_real_ip_from 45.138.16.248;
 set_real_ip_from 45.138.16.42;
 set_real_ip_from 45.138.16.69;
+set_real_ip_from 45.138.16.76;
 set_real_ip_from 45.141.215.110;
 set_real_ip_from 45.141.215.111;
 set_real_ip_from 45.141.215.114;
@@ -1725,7 +1726,6 @@ set_real_ip_from 5.45.98.162;
 set_real_ip_from 57.128.212.103;
 set_real_ip_from 57.128.220.107;
 set_real_ip_from 57.129.91.235;
-set_real_ip_from 5.79.66.19;
 set_real_ip_from 5.8.18.30;
 set_real_ip_from 5.8.18.99;
 set_real_ip_from 62.171.137.169;
@@ -1743,7 +1743,6 @@ set_real_ip_from 66.78.40.182;
 set_real_ip_from 66.94.111.228;
 set_real_ip_from 67.219.109.141;
 set_real_ip_from 71.19.144.106;
-set_real_ip_from 72.14.179.10;
 set_real_ip_from 72.211.49.235;
 set_real_ip_from 72.235.129.116;
 set_real_ip_from 72.5.43.62;
