Update lists at 20250724-2101

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -895,14 +895,9 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
-allow 23.191.200.27;
 allow 23.191.200.28;
-allow 23.191.200.29;
-allow 23.191.200.3;
 allow 23.191.200.30;
 allow 23.191.200.31;
-allow 23.191.200.4;
-allow 23.191.200.5;
 allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
@@ -927,6 +922,7 @@ allow 2.58.56.35;
 allow 2.58.56.43;
 allow 2.58.56.93;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
+allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
 allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c04::f03c:95ff:fe41:d42c;
@@ -1430,7 +1426,6 @@ allow 2a0e:97c0:3e3:460:1337:b30b:1337:10;
 allow 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 allow 2a0e:97c0:3e3:a0e::1;
 allow 2a0e:97c0:3ea:882::1;
-allow 2a0e:97c0:470::28;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:11::796d;
@@ -1743,6 +1738,7 @@ allow 66.78.40.182;
 allow 66.94.111.228;
 allow 67.219.109.141;
 allow 71.19.144.106;
+allow 72.14.179.10;
 allow 72.211.49.235;
 allow 72.235.129.116;
 allow 72.5.43.62;
@@ -1832,7 +1828,6 @@ allow 93.123.109.116;
 allow 93.123.12.112;
 allow 93.185.165.211;
 allow 93.88.75.35;
-allow 93.90.74.28;
 allow 93.90.74.29;
 allow 93.95.227.37;
 allow 93.95.228.125;
