--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -123,6 +123,7 @@ deny 2407:3640:2207:8882::1;
 deny 2407:3640:2259:6302::1;
 deny 2407:3641:2259:8208::1;
 deny 2600:3c00::f03c:91ff:fe73:f9ba;
+deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c00::f03c:95ff:fe5d:8f00;
 deny 2600:3c03::f03c:95ff:fe5d:562;
 deny 2600:3c04::f03c:95ff:fe41:d42c;
@@ -625,7 +626,6 @@ deny 2a0e:97c0:3e3:460:1337:b30b:1337:10;
 deny 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 deny 2a0e:97c0:3e3:a0e::1;
 deny 2a0e:97c0:3ea:882::1;
-deny 2a0e:97c0:470::28;
 deny 2a0e:97c0:470::30;
 deny 2a0e:b107:dd0::3:fa35:9316;
 deny 2a0e:bfc0:0:11::796d;
