--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -533,7 +533,6 @@ allow 194.15.112.133;
 allow 194.15.113.118;
 allow 194.15.115.212;
 allow 194.15.36.117;
-allow 194.163.157.49;
 allow 194.26.192.77;
 allow 194.53.137.156;
 allow 194.87.55.98;
@@ -887,7 +886,6 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
-allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -896,8 +894,8 @@ allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.28;
-allow 23.191.200.30;
-allow 23.191.200.31;
+allow 23.191.200.4;
+allow 23.191.200.5;
 allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
@@ -1426,6 +1424,7 @@ allow 2a0e:97c0:3e3:460:1337:b30b:1337:10;
 allow 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 allow 2a0e:97c0:3e3:a0e::1;
 allow 2a0e:97c0:3ea:882::1;
+allow 2a0e:97c0:470::28;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:11::796d;
@@ -1828,6 +1827,7 @@ allow 93.123.109.116;
 allow 93.123.12.112;
 allow 93.185.165.211;
 allow 93.88.75.35;
+allow 93.90.74.28;
 allow 93.90.74.29;
 allow 93.95.227.37;
 allow 93.95.228.125;
