--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -262,7 +262,6 @@ allow 185.165.171.84;
 allow 185.170.114.25;
 allow 185.183.157.214;
 allow 185.183.159.40;
-allow 185.183.192.147;
 allow 185.191.204.254;
 allow 185.191.239.172;
 allow 185.191.239.49;
@@ -533,6 +532,7 @@ allow 194.113.38.5;
 allow 194.15.112.133;
 allow 194.15.113.118;
 allow 194.15.115.212;
+allow 194.15.36.117;
 allow 194.26.192.77;
 allow 194.53.137.156;
 allow 194.87.55.98;
@@ -887,7 +887,6 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
-allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -895,9 +894,9 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
-allow 23.191.200.28;
-allow 23.191.200.30;
-allow 23.191.200.6;
+allow 23.191.200.3;
+allow 23.191.200.4;
+allow 23.191.200.5;
 allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
@@ -1425,6 +1424,7 @@ allow 2a0e:97c0:3e3:460:1337:b20b:1337:9;
 allow 2a0e:97c0:3e3:460:1337:b30b:1337:10;
 allow 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 allow 2a0e:97c0:3e3:a0e::1;
+allow 2a0e:97c0:3e3:b6::1;
 allow 2a0e:97c0:3ea:882::1;
 allow 2a0e:97c0:470::28;
 allow 2a0e:97c0:470::30;
@@ -1564,6 +1564,7 @@ allow 45.128.133.242;
 allow 45.132.246.245;
 allow 45.13.225.69;
 allow 45.13.225.78;
+allow 45.133.74.53;
 allow 45.134.225.36;
 allow 45.137.70.158;
 allow 45.138.16.107;
