--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -200,6 +200,7 @@ deny 178.17.170.144;
 deny 178.17.170.23;
 deny 178.17.171.102;
 deny 178.17.174.14;
+deny 178.17.174.164;
 deny 178.175.148.209;
 deny 178.175.148.246;
 deny 178.20.55.16;
@@ -228,6 +229,7 @@ deny 185.100.87.136;
 deny 185.100.87.166;
 deny 185.100.87.41;
 deny 185.10.16.41;
+deny 185.104.120.10;
 deny 185.104.120.30;
 deny 185.104.120.40;
 deny 185.106.102.102;
@@ -888,7 +890,6 @@ deny 23.191.200.16;
 deny 23.191.200.17;
 deny 23.191.200.18;
 deny 23.191.200.19;
-deny 23.191.200.2;
 deny 23.191.200.20;
 deny 23.191.200.21;
 deny 23.191.200.22;
@@ -898,9 +899,12 @@ deny 23.191.200.25;
 deny 23.191.200.26;
 deny 23.191.200.27;
 deny 23.191.200.28;
+deny 23.191.200.29;
 deny 23.191.200.3;
 deny 23.191.200.30;
-deny 23.191.200.31;
+deny 23.191.200.4;
+deny 23.191.200.5;
+deny 23.191.200.6;
 deny 23.191.200.7;
 deny 23.191.200.8;
 deny 23.191.200.9;
@@ -1139,6 +1143,7 @@ deny 2a00:1dc0:caff:12c::4d3a;
 deny 2a00:1dc0:caff:138::94d2;
 deny 2a00:1dc0:caff:15::45dc;
 deny 2a00:1dc0:caff:44::326d;
+deny 2a00:1dc0:caff:73::a568;
 deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:4d80::1;
 deny 2a00:74a0:e000:1003::114;
@@ -1231,6 +1236,7 @@ deny 2a06:1700:0:50::11;
 deny 2a06:1700:3:19::1;
 deny 2a06:1700:3:34::1;
 deny 2a06:1700:4:14::1;
+deny 2a06:3000::10;
 deny 2a06:3000::30;
 deny 2a06:3000::40;
 deny 2a06:d380:0:103::62;
@@ -1529,6 +1535,7 @@ deny 2c0f:6c0:0:d::d28b;
 deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.184.236.104;
+deny 31.220.75.237;
 deny 31.44.238.25;
 deny 35.0.127.52;
 deny 37.114.50.124;
@@ -1555,7 +1562,6 @@ deny 38.135.25.142;
 deny 38.135.25.143;
 deny 38.135.25.144;
 deny 38.135.25.2;
-deny 38.242.254.131;
 deny 38.97.116.242;
 deny 38.97.116.243;
 deny 38.97.116.244;
