--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -922,9 +922,10 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
-allow 23.191.200.28;
-allow 23.191.200.30;
-allow 23.191.200.31;
+allow 23.191.200.29;
+allow 23.191.200.3;
+allow 23.191.200.4;
+allow 23.191.200.5;
 allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
@@ -1269,6 +1270,7 @@ allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
+allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
@@ -1545,7 +1547,6 @@ allow 2a12:a800:2:1:45:138:16:42;
 allow 2a12:a800:2:1:45:138:16:69;
 allow 2a12:a800:2:1:45:138:16:76;
 allow 2a12:a800:2:1:45:141:215:110;
-allow 2a12:a800:2:1:45:141:215:111;
 allow 2a12:a800:2:1:45:141:215:114;
 allow 2a12:a800:2:1:45:141:215:167;
 allow 2a12:a800:2:1:45:141:215:169;
@@ -1637,7 +1638,6 @@ allow 45.138.16.42;
 allow 45.138.16.69;
 allow 45.138.16.76;
 allow 45.141.215.110;
-allow 45.141.215.111;
 allow 45.141.215.114;
 allow 45.141.215.167;
 allow 45.141.215.169;
@@ -1746,6 +1746,7 @@ allow 51.81.222.62;
 allow 5.181.80.107;
 allow 51.91.18.151;
 allow 5.196.95.34;
+allow 52.248.71.67;
 allow 5.253.247.27;
 allow 5.255.101.10;
 allow 5.255.101.131;
@@ -1832,6 +1833,7 @@ allow 83.147.17.190;
 allow 83.217.9.73;
 allow 83.228.94.69;
 allow 83.96.213.63;
+allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.211.226.13;
