--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -922,9 +922,10 @@ set_real_ip_from 23.191.200.23;
 set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
-set_real_ip_from 23.191.200.28;
-set_real_ip_from 23.191.200.30;
-set_real_ip_from 23.191.200.31;
+set_real_ip_from 23.191.200.29;
+set_real_ip_from 23.191.200.3;
+set_real_ip_from 23.191.200.4;
+set_real_ip_from 23.191.200.5;
 set_real_ip_from 23.191.200.6;
 set_real_ip_from 23.191.200.7;
 set_real_ip_from 23.191.200.8;
@@ -1269,6 +1270,7 @@ set_real_ip_from 2a04:52c0:123:c6c3::1;
 set_real_ip_from 2a04:52c0:126:3ab8::1;
 set_real_ip_from 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 set_real_ip_from 2a04:52c0:130:896e::1;
+set_real_ip_from 2a04:9dc0:31::c0cc:4d;
 set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:110:3e::1;
 set_real_ip_from 2a05:541:112:31::1;
@@ -1545,7 +1547,6 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:42;
 set_real_ip_from 2a12:a800:2:1:45:138:16:69;
 set_real_ip_from 2a12:a800:2:1:45:138:16:76;
 set_real_ip_from 2a12:a800:2:1:45:141:215:110;
-set_real_ip_from 2a12:a800:2:1:45:141:215:111;
 set_real_ip_from 2a12:a800:2:1:45:141:215:114;
 set_real_ip_from 2a12:a800:2:1:45:141:215:167;
 set_real_ip_from 2a12:a800:2:1:45:141:215:169;
@@ -1637,7 +1638,6 @@ set_real_ip_from 45.138.16.42;
 set_real_ip_from 45.138.16.69;
 set_real_ip_from 45.138.16.76;
 set_real_ip_from 45.141.215.110;
-set_real_ip_from 45.141.215.111;
 set_real_ip_from 45.141.215.114;
 set_real_ip_from 45.141.215.167;
 set_real_ip_from 45.141.215.169;
@@ -1746,6 +1746,7 @@ set_real_ip_from 51.81.222.62;
 set_real_ip_from 5.181.80.107;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
+set_real_ip_from 52.248.71.67;
 set_real_ip_from 5.253.247.27;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
@@ -1832,6 +1833,7 @@ set_real_ip_from 83.147.17.190;
 set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.228.94.69;
 set_real_ip_from 83.96.213.63;
+set_real_ip_from 83.97.20.77;
 set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.19.182.20;
 set_real_ip_from 84.211.226.13;
