--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -443,6 +443,7 @@ set_real_ip_from 2a04:52c0:123:c6c3::1;
 set_real_ip_from 2a04:52c0:126:3ab8::1;
 set_real_ip_from 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 set_real_ip_from 2a04:52c0:130:896e::1;
+set_real_ip_from 2a04:9dc0:31::c0cc:4d;
 set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:110:3e::1;
 set_real_ip_from 2a05:541:112:31::1;
@@ -719,7 +720,6 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:42;
 set_real_ip_from 2a12:a800:2:1:45:138:16:69;
 set_real_ip_from 2a12:a800:2:1:45:138:16:76;
 set_real_ip_from 2a12:a800:2:1:45:141:215:110;
-set_real_ip_from 2a12:a800:2:1:45:141:215:111;
 set_real_ip_from 2a12:a800:2:1:45:141:215:114;
 set_real_ip_from 2a12:a800:2:1:45:141:215:167;
 set_real_ip_from 2a12:a800:2:1:45:141:215:169;
