Update lists at 20250726-1801

--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -39,61 +39,26 @@ set_real_ip_from 104.167.242.117;
 set_real_ip_from 104.167.242.118;
 set_real_ip_from 104.192.3.74;
 set_real_ip_from 104.219.236.100;
-set_real_ip_from 104.244.72.132;
-set_real_ip_from 104.244.73.136;
-set_real_ip_from 104.244.73.190;
-set_real_ip_from 104.244.73.193;
-set_real_ip_from 104.244.73.43;
 set_real_ip_from 104.244.74.23;
-set_real_ip_from 104.244.74.97;
-set_real_ip_from 104.244.75.140;
 set_real_ip_from 104.244.75.74;
-set_real_ip_from 104.244.76.237;
-set_real_ip_from 104.244.77.208;
 set_real_ip_from 104.244.78.162;
 set_real_ip_from 104.244.78.232;
-set_real_ip_from 104.244.78.233;
-set_real_ip_from 104.244.79.44;
-set_real_ip_from 104.244.79.50;
-set_real_ip_from 104.244.79.61;
 set_real_ip_from 104.254.90.195;
 set_real_ip_from 107.174.146.25;
-set_real_ip_from 107.189.10.175;
-set_real_ip_from 107.189.1.111;
-set_real_ip_from 107.189.11.111;
-set_real_ip_from 107.189.1.160;
 set_real_ip_from 107.189.1.228;
-set_real_ip_from 107.189.12.3;
 set_real_ip_from 107.189.12.7;
 set_real_ip_from 107.189.12.88;
 set_real_ip_from 107.189.13.180;
-set_real_ip_from 107.189.13.253;
 set_real_ip_from 107.189.13.254;
 set_real_ip_from 107.189.13.91;
-set_real_ip_from 107.189.14.4;
-set_real_ip_from 107.189.14.43;
-set_real_ip_from 107.189.1.9;
 set_real_ip_from 107.189.2.108;
 set_real_ip_from 107.189.29.103;
 set_real_ip_from 107.189.29.184;
-set_real_ip_from 107.189.30.236;
 set_real_ip_from 107.189.30.49;
 set_real_ip_from 107.189.30.69;
-set_real_ip_from 107.189.30.86;
 set_real_ip_from 107.189.3.11;
-set_real_ip_from 107.189.31.33;
-set_real_ip_from 107.189.4.12;
-set_real_ip_from 107.189.4.209;
-set_real_ip_from 107.189.5.121;
-set_real_ip_from 107.189.5.249;
-set_real_ip_from 107.189.5.7;
-set_real_ip_from 107.189.7.144;
 set_real_ip_from 107.189.7.168;
-set_real_ip_from 107.189.8.133;
 set_real_ip_from 107.189.8.136;
-set_real_ip_from 107.189.8.181;
-set_real_ip_from 107.189.8.226;
-set_real_ip_from 107.189.8.56;
 set_real_ip_from 107.189.8.70;
 set_real_ip_from 108.59.12.3;
 set_real_ip_from 108.61.189.136;
@@ -254,6 +219,7 @@ set_real_ip_from 185.100.87.136;
 set_real_ip_from 185.100.87.166;
 set_real_ip_from 185.100.87.41;
 set_real_ip_from 185.10.16.41;
+set_real_ip_from 185.104.120.10;
 set_real_ip_from 185.104.120.30;
 set_real_ip_from 185.104.120.40;
 set_real_ip_from 185.106.102.102;
@@ -581,11 +547,7 @@ set_real_ip_from 195.47.238.92;
 set_real_ip_from 195.47.238.93;
 set_real_ip_from 195.80.151.242;
 set_real_ip_from 195.88.74.206;
-set_real_ip_from 198.167.206.189;
-set_real_ip_from 198.251.84.163;
-set_real_ip_from 198.251.84.237;
-set_real_ip_from 198.251.88.18;
-set_real_ip_from 198.251.89.96;
+set_real_ip_from 198.167.206.253;
 set_real_ip_from 198.46.166.157;
 set_real_ip_from 198.50.212.160;
 set_real_ip_from 198.58.107.53;
@@ -920,12 +882,7 @@ set_real_ip_from 23.191.200.23;
 set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
-set_real_ip_from 23.191.200.27;
-set_real_ip_from 23.191.200.28;
-set_real_ip_from 23.191.200.29;
-set_real_ip_from 23.191.200.3;
-set_real_ip_from 23.191.200.30;
-set_real_ip_from 23.191.200.5;
+set_real_ip_from 23.191.200.31;
 set_real_ip_from 23.191.200.6;
 set_real_ip_from 23.191.200.7;
 set_real_ip_from 23.191.200.8;
@@ -993,51 +950,6 @@ set_real_ip_from 2605:6400:20:be7::1;
 set_real_ip_from 2605:6400:20:c26:5163:253e:1ef6:d887;
 set_real_ip_from 2605:6400:20:c26:5163:253e:1ef6:d896;
 set_real_ip_from 2605:6400:20:ff9::1;
-set_real_ip_from 2605:6400:30:e948:4cee:191b:1e55:25b3;
-set_real_ip_from 2605:6400:30:ea52:4246:fb82:f36c:8ede;
-set_real_ip_from 2605:6400:30:ea86:59b6:d4c6:5192:1a19;
-set_real_ip_from 2605:6400:30:eb71:51b7:4869:7579:3aa1;
-set_real_ip_from 2605:6400:30:ebb6:532:acc:65:31;
-set_real_ip_from 2605:6400:30:edc3::34;
-set_real_ip_from 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
-set_real_ip_from 2605:6400:30:f04d:2605:6400:30:30;
-set_real_ip_from 2605:6400:30:f05d:c272:5525:72b1:e64c;
-set_real_ip_from 2605:6400:30:f060:be62:b857:b818:9144;
-set_real_ip_from 2605:6400:30:f08c:45b7:4a99:a154:694e;
-set_real_ip_from 2605:6400:30:f0ed:9151:66ed:6366:5c74;
-set_real_ip_from 2605:6400:30:f174::;
-set_real_ip_from 2605:6400:30:f174:1:1:1:1;
-set_real_ip_from 2605:6400:30:f174:1111:2222:3333:4444;
-set_real_ip_from 2605:6400:30:f174:1:2:3:4;
-set_real_ip_from 2605:6400:30:f174::42;
-set_real_ip_from 2605:6400:30:f174:42:42::;
-set_real_ip_from 2605:6400:30:f174:42:42:42:0;
-set_real_ip_from 2605:6400:30:f174:42:42:42:42;
-set_real_ip_from 2605:6400:30:f174:4:3:2:1;
-set_real_ip_from 2605:6400:30:f174:cafe::;
-set_real_ip_from 2605:6400:30:f1fa:f57f:d285:3ed9:ee27;
-set_real_ip_from 2605:6400:30:f38b:28b3:cd24:51f3:e412;
-set_real_ip_from 2605:6400:30:f3d3:7c3:507c:6f32:c132;
-set_real_ip_from 2605:6400:30:f414:bf7c:cd6f:39bc:c682;
-set_real_ip_from 2605:6400:30:f440:757e:adf1:55f7:5a31;
-set_real_ip_from 2605:6400:30:f49b:e2ee:34f8:c854:6f63;
-set_real_ip_from 2605:6400:30:f4ae:8f7b:cc6e:d1d7:b978;
-set_real_ip_from 2605:6400:30:f503::1;
-set_real_ip_from 2605:6400:30:f51a:f826:ecfc:47b6:92a9;
-set_real_ip_from 2605:6400:30:f534:ae1d:c3d9:9941:d85e;
-set_real_ip_from 2605:6400:30:f57d:916e:73f8:d5e7:675b;
-set_real_ip_from 2605:6400:30:f5a3:5bb1:af4e:c969:c73e;
-set_real_ip_from 2605:6400:30:f5db:25a1:b884:ef2d:8818;
-set_real_ip_from 2605:6400:30:f753:891d:ee77:e97c:741a;
-set_real_ip_from 2605:6400:30:f77f:f41c:2bce:7d61:2e06;
-set_real_ip_from 2605:6400:30:f78b::2;
-set_real_ip_from 2605:6400:30:f7c0:8511:b113:ca11:9baa;
-set_real_ip_from 2605:6400:30:f7ca::2;
-set_real_ip_from 2605:6400:30:f805:1e96:b223:fbe5:cfac;
-set_real_ip_from 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
-set_real_ip_from 2605:6400:30:f8b5:620c:dc25:c624:aafd;
-set_real_ip_from 2605:6400:30:f8da:2b2:a293:30ad:506d;
-set_real_ip_from 2605:6400:30:f920:f523:28ef:3617:8b86;
 set_real_ip_from 2605:6400:40:fe09::2;
 set_real_ip_from 2605:a140:2262:7686::1;
 set_real_ip_from 2605:a141:2261:4410::1;
@@ -1285,6 +1197,7 @@ set_real_ip_from 2a06:1700:0:50::11;
 set_real_ip_from 2a06:1700:3:19::1;
 set_real_ip_from 2a06:1700:3:34::1;
 set_real_ip_from 2a06:1700:4:14::1;
+set_real_ip_from 2a06:3000::10;
 set_real_ip_from 2a06:3000::30;
 set_real_ip_from 2a06:3000::40;
 set_real_ip_from 2a06:d380:0:103::62;
@@ -1732,7 +1645,6 @@ set_real_ip_from 46.246.92.34;
 set_real_ip_from 46.250.243.29;
 set_real_ip_from 46.253.4.208;
 set_real_ip_from 46.38.243.210;
-set_real_ip_from 46.8.43.110;
 set_real_ip_from 5.101.82.22;
 set_real_ip_from 5.104.84.183;
 set_real_ip_from 5.104.86.6;
