--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -181,7 +181,6 @@ allow 176.65.148.133;
 allow 176.65.148.3;
 allow 176.65.149.100;
 allow 176.65.149.84;
-allow 176.65.149.87;
 allow 176.65.149.88;
 allow 176.65.149.96;
 allow 176.97.114.202;
@@ -552,7 +551,7 @@ allow 195.47.238.92;
 allow 195.47.238.93;
 allow 195.80.151.242;
 allow 195.88.74.206;
-allow 198.167.206.253;
+allow 198.167.206.189;
 allow 198.46.166.157;
 allow 198.50.212.160;
 allow 198.58.107.53;
@@ -888,11 +887,11 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
-allow 23.191.200.27;
-allow 23.191.200.29;
-allow 23.191.200.30;
-allow 23.191.200.31;
+allow 23.191.200.28;
+allow 23.191.200.3;
+allow 23.191.200.4;
 allow 23.191.200.5;
+allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
@@ -1194,7 +1193,6 @@ allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
-allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:655b::1;
 allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
@@ -1411,6 +1409,7 @@ allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:11::796d;
 allow 2a0e:bfc0:0:14::24a8;
+allow 2a0e:bfc0:0:2::8a62;
 allow 2a0e:bfc0:0:5::2;
 allow 2a0e:bfc2:0:2c::1;
 allow 2a0e:bfc7:0:3::2d83;
@@ -1480,7 +1479,6 @@ allow 2a12:a800:2:1:45:141:215:62;
 allow 2a12:a800:2:1:45:141:215:63;
 allow 2a12:a800:2:1:45:141:215:80;
 allow 2a12:a800:2:1:45:141:215:88;
-allow 2a12:a800:2:1:45:141:215:90;
 allow 2a12:a800:2:1:45:141:215:95;
 allow 2a12:a800:2:1:45:141:215:97;
 allow 2a12:a800:2:1:45:80:158:167;
@@ -1502,6 +1500,7 @@ allow 2c0f:6c0:0:d::d28b;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
+allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.114.50.124;
@@ -1528,7 +1527,6 @@ allow 38.135.25.142;
 allow 38.135.25.143;
 allow 38.135.25.144;
 allow 38.135.25.2;
-allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1569,7 +1567,6 @@ allow 45.141.215.62;
 allow 45.141.215.63;
 allow 45.141.215.80;
 allow 45.141.215.88;
-allow 45.141.215.90;
 allow 45.141.215.95;
 allow 45.141.215.97;
 allow 45.143.200.32;
@@ -1641,6 +1638,7 @@ allow 45.9.168.192;
 allow 45.94.31.68;
 allow 45.95.169.104;
 allow 45.95.169.109;
+allow 45.95.169.110;
 allow 45.95.169.252;
 allow 46.165.243.36;
 allow 46.23.109.25;
@@ -1650,6 +1648,7 @@ allow 46.246.92.34;
 allow 46.250.243.29;
 allow 46.253.4.208;
 allow 46.38.243.210;
+allow 46.8.43.110;
 allow 5.101.82.22;
 allow 5.104.84.183;
 allow 5.104.86.6;
