Update lists at 20250729-0301

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -340,6 +340,7 @@ deny 2a04:52c0:103:412::1;
 deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -437,7 +438,6 @@ deny 2a0b:f4c2:1::167;
 deny 2a0b:f4c2:1::168;
 deny 2a0b:f4c2:1::169;
 deny 2a0b:f4c2:1::170;
-deny 2a0b:f4c2:1::171;
 deny 2a0b:f4c2:1::172;
 deny 2a0b:f4c2:1::173;
 deny 2a0b:f4c2:1::174;
@@ -645,6 +645,7 @@ deny 2a12:a800:2:1:45:141:215:62;
 deny 2a12:a800:2:1:45:141:215:63;
 deny 2a12:a800:2:1:45:141:215:80;
 deny 2a12:a800:2:1:45:141:215:88;
+deny 2a12:a800:2:1:45:141:215:90;
 deny 2a12:a800:2:1:45:141:215:95;
 deny 2a12:a800:2:1:45:141:215:97;
 deny 2a12:a800:2:1:45:80:158:167;
