--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -367,7 +367,6 @@ allow 185.220.101.167;
 allow 185.220.101.168;
 allow 185.220.101.169;
 allow 185.220.101.170;
-allow 185.220.101.171;
 allow 185.220.101.172;
 allow 185.220.101.173;
 allow 185.220.101.174;
@@ -828,6 +827,7 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
+allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -835,10 +835,10 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
-allow 23.191.200.28;
-allow 23.191.200.3;
-allow 23.191.200.30;
-allow 23.191.200.6;
+allow 23.191.200.27;
+allow 23.191.200.31;
+allow 23.191.200.4;
+allow 23.191.200.5;
 allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
@@ -1079,6 +1079,7 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1176,7 +1177,6 @@ allow 2a0b:f4c2:1::167;
 allow 2a0b:f4c2:1::168;
 allow 2a0b:f4c2:1::169;
 allow 2a0b:f4c2:1::170;
-allow 2a0b:f4c2:1::171;
 allow 2a0b:f4c2:1::172;
 allow 2a0b:f4c2:1::173;
 allow 2a0b:f4c2:1::174;
@@ -1384,6 +1384,7 @@ allow 2a12:a800:2:1:45:141:215:62;
 allow 2a12:a800:2:1:45:141:215:63;
 allow 2a12:a800:2:1:45:141:215:80;
 allow 2a12:a800:2:1:45:141:215:88;
+allow 2a12:a800:2:1:45:141:215:90;
 allow 2a12:a800:2:1:45:141:215:95;
 allow 2a12:a800:2:1:45:141:215:97;
 allow 2a12:a800:2:1:45:80:158:167;
@@ -1477,6 +1478,7 @@ allow 45.141.215.62;
 allow 45.141.215.63;
 allow 45.141.215.80;
 allow 45.141.215.88;
+allow 45.141.215.90;
 allow 45.141.215.95;
 allow 45.141.215.97;
 allow 45.143.200.32;
@@ -1557,7 +1559,6 @@ allow 46.234.47.105;
 allow 46.250.243.29;
 allow 46.253.4.208;
 allow 46.38.243.210;
-allow 46.8.43.110;
 allow 5.101.82.22;
 allow 5.104.84.183;
 allow 5.104.86.6;
@@ -1569,8 +1570,8 @@ allow 51.81.222.62;
 allow 5.181.80.107;
 allow 51.91.18.151;
 allow 5.196.95.34;
-allow 52.248.71.67;
 allow 5.253.247.27;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
