--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -135,6 +135,7 @@ set_real_ip_from 124.198.131.62;
 set_real_ip_from 124.198.132.13;
 set_real_ip_from 124.198.132.172;
 set_real_ip_from 124.198.132.237;
+set_real_ip_from 124.198.132.52;
 set_real_ip_from 125.212.241.131;
 set_real_ip_from 125.253.56.119;
 set_real_ip_from 128.31.0.13;
@@ -473,6 +474,7 @@ set_real_ip_from 190.103.179.98;
 set_real_ip_from 190.120.229.98;
 set_real_ip_from 190.211.254.97;
 set_real_ip_from 192.108.48.150;
+set_real_ip_from 192.159.99.168;
 set_real_ip_from 192.159.99.74;
 set_real_ip_from 192.42.116.13;
 set_real_ip_from 192.42.116.14;
@@ -813,6 +815,7 @@ set_real_ip_from 23.191.200.16;
 set_real_ip_from 23.191.200.17;
 set_real_ip_from 23.191.200.18;
 set_real_ip_from 23.191.200.19;
+set_real_ip_from 23.191.200.2;
 set_real_ip_from 23.191.200.20;
 set_real_ip_from 23.191.200.21;
 set_real_ip_from 23.191.200.22;
@@ -820,12 +823,10 @@ set_real_ip_from 23.191.200.23;
 set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
+set_real_ip_from 23.191.200.27;
 set_real_ip_from 23.191.200.28;
-set_real_ip_from 23.191.200.29;
 set_real_ip_from 23.191.200.3;
-set_real_ip_from 23.191.200.30;
-set_real_ip_from 23.191.200.31;
-set_real_ip_from 23.191.200.4;
+set_real_ip_from 23.191.200.5;
 set_real_ip_from 23.191.200.6;
 set_real_ip_from 23.191.200.7;
 set_real_ip_from 23.191.200.8;
@@ -1273,7 +1274,6 @@ set_real_ip_from 2a0e:97c0:3e3:460:1337:b00b:1337:1;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b01b:1337:2;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b02b:1337:3;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b03b:1337:4;
-set_real_ip_from 2a0e:97c0:3e3:460:1337:b04b:1337:5;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b05b:1337:6;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b10b:1337:8;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b20b:1337:9;
@@ -1302,6 +1302,7 @@ set_real_ip_from 2a0f:df00:0:255::198;
 set_real_ip_from 2a0f:df00:0:255::199;
 set_real_ip_from 2a0f:df00:0:255::200;
 set_real_ip_from 2a10:8a40:f313::29;
+set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a11:6100:0:1467::;
 set_real_ip_from 2a12:a800:11:1:124:198:131:108;
@@ -1311,6 +1312,8 @@ set_real_ip_from 2a12:a800:11:1:124:198:131:62;
 set_real_ip_from 2a12:a800:11:1:124:198:132:13;
 set_real_ip_from 2a12:a800:11:1:124:198:132:172;
 set_real_ip_from 2a12:a800:11:1:124:198:132:237;
+set_real_ip_from 2a12:a800:11:1:124:198:132:52;
+set_real_ip_from 2a12:a800:11:1:192:159:99:168;
 set_real_ip_from 2a12:a800:11:1:192:159:99:74;
 set_real_ip_from 2a12:a800:1:1:194:26:192:77;
 set_real_ip_from 2a12:a800:1:1:2:58:56:220;
@@ -1376,7 +1379,6 @@ set_real_ip_from 2a12:de40:21:1be4::;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.184.236.104;
-set_real_ip_from 31.220.75.237;
 set_real_ip_from 31.44.238.25;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.114.50.124;
@@ -1402,6 +1404,7 @@ set_real_ip_from 38.135.25.142;
 set_real_ip_from 38.135.25.143;
 set_real_ip_from 38.135.25.144;
 set_real_ip_from 38.135.25.2;
+set_real_ip_from 38.242.254.131;
 set_real_ip_from 38.97.116.242;
 set_real_ip_from 38.97.116.243;
 set_real_ip_from 38.97.116.244;
@@ -1412,7 +1415,6 @@ set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.13.225.69;
-set_real_ip_from 45.13.225.78;
 set_real_ip_from 45.133.74.53;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.137.70.158;
@@ -1677,6 +1679,8 @@ set_real_ip_from 91.208.75.178;
 set_real_ip_from 91.208.75.239;
 set_real_ip_from 91.208.75.3;
 set_real_ip_from 91.208.75.4;
+set_real_ip_from 91.219.236.101;
+set_real_ip_from 91.219.236.91;
 set_real_ip_from 91.227.114.153;
 set_real_ip_from 91.92.109.126;
 set_real_ip_from 91.92.109.43;
