--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -163,6 +163,7 @@ allow 152.53.106.19;
 allow 152.53.133.14;
 allow 152.53.53.243;
 allow 154.16.116.61;
+allow 154.26.159.157;
 allow 154.41.95.1;
 allow 154.41.95.2;
 allow 154.53.58.161;
@@ -252,7 +253,6 @@ allow 179.43.159.199;
 allow 179.43.159.200;
 allow 179.43.159.201;
 allow 179.43.159.78;
-allow 179.43.182.232;
 allow 179.43.182.58;
 allow 179.55.71.11;
 allow 180.150.226.99;
@@ -304,6 +304,22 @@ allow 185.193.52.180;
 allow 185.195.71.244;
 allow 185.207.107.130;
 allow 185.207.107.216;
+allow 185.220.100.240;
+allow 185.220.100.241;
+allow 185.220.100.242;
+allow 185.220.100.243;
+allow 185.220.100.244;
+allow 185.220.100.245;
+allow 185.220.100.246;
+allow 185.220.100.247;
+allow 185.220.100.248;
+allow 185.220.100.249;
+allow 185.220.100.250;
+allow 185.220.100.251;
+allow 185.220.100.252;
+allow 185.220.100.253;
+allow 185.220.100.254;
+allow 185.220.100.255;
 allow 185.220.101.100;
 allow 185.220.101.101;
 allow 185.220.101.102;
@@ -804,6 +820,7 @@ allow 23.137.253.27;
 allow 23.137.254.244;
 allow 23.151.8.8;
 allow 23.155.8.104;
+allow 23.184.48.13;
 allow 23.184.48.78;
 allow 23.191.200.10;
 allow 23.191.200.11;
@@ -823,9 +840,10 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
-allow 23.191.200.27;
-allow 23.191.200.28;
+allow 23.191.200.29;
 allow 23.191.200.3;
+allow 23.191.200.30;
+allow 23.191.200.4;
 allow 23.191.200.5;
 allow 23.191.200.6;
 allow 23.191.200.7;
@@ -1116,6 +1134,22 @@ allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
 allow 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
+allow 2a0b:f4c0:16c:10::1;
+allow 2a0b:f4c0:16c:1::1;
+allow 2a0b:f4c0:16c:11::1;
+allow 2a0b:f4c0:16c:12::1;
+allow 2a0b:f4c0:16c:13::1;
+allow 2a0b:f4c0:16c:14::1;
+allow 2a0b:f4c0:16c:15::1;
+allow 2a0b:f4c0:16c:16::1;
+allow 2a0b:f4c0:16c:2::1;
+allow 2a0b:f4c0:16c:3::1;
+allow 2a0b:f4c0:16c:4::1;
+allow 2a0b:f4c0:16c:5::1;
+allow 2a0b:f4c0:16c:6::1;
+allow 2a0b:f4c0:16c:7::1;
+allow 2a0b:f4c0:16c:8::1;
+allow 2a0b:f4c0:16c:9::1;
 allow 2a0b:f4c2:1::129;
 allow 2a0b:f4c2:1::130;
 allow 2a0b:f4c2:1::132;
@@ -1274,6 +1308,7 @@ allow 2a0e:97c0:3e3:460:1337:b00b:1337:1;
 allow 2a0e:97c0:3e3:460:1337:b01b:1337:2;
 allow 2a0e:97c0:3e3:460:1337:b02b:1337:3;
 allow 2a0e:97c0:3e3:460:1337:b03b:1337:4;
+allow 2a0e:97c0:3e3:460:1337:b04b:1337:5;
 allow 2a0e:97c0:3e3:460:1337:b05b:1337:6;
 allow 2a0e:97c0:3e3:460:1337:b10b:1337:8;
 allow 2a0e:97c0:3e3:460:1337:b20b:1337:9;
@@ -1359,7 +1394,6 @@ allow 2a12:a800:2:1:45:141:215:62;
 allow 2a12:a800:2:1:45:141:215:63;
 allow 2a12:a800:2:1:45:141:215:80;
 allow 2a12:a800:2:1:45:141:215:88;
-allow 2a12:a800:2:1:45:141:215:90;
 allow 2a12:a800:2:1:45:141:215:95;
 allow 2a12:a800:2:1:45:141:215:97;
 allow 2a12:a800:2:1:45:80:158:167;
@@ -1415,6 +1449,7 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.132.246.245;
 allow 45.13.225.69;
+allow 45.13.225.78;
 allow 45.133.74.53;
 allow 45.134.225.36;
 allow 45.137.70.158;
@@ -1448,7 +1483,6 @@ allow 45.141.215.62;
 allow 45.141.215.63;
 allow 45.141.215.80;
 allow 45.141.215.88;
-allow 45.141.215.90;
 allow 45.141.215.95;
 allow 45.141.215.97;
 allow 45.143.200.32;
