--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -389,6 +389,22 @@ set_real_ip_from 2a09:61c0::22;
 set_real_ip_from 2a09:61c0::beef;
 set_real_ip_from 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 set_real_ip_from 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
+set_real_ip_from 2a0b:f4c0:16c:10::1;
+set_real_ip_from 2a0b:f4c0:16c:1::1;
+set_real_ip_from 2a0b:f4c0:16c:11::1;
+set_real_ip_from 2a0b:f4c0:16c:12::1;
+set_real_ip_from 2a0b:f4c0:16c:13::1;
+set_real_ip_from 2a0b:f4c0:16c:14::1;
+set_real_ip_from 2a0b:f4c0:16c:15::1;
+set_real_ip_from 2a0b:f4c0:16c:16::1;
+set_real_ip_from 2a0b:f4c0:16c:2::1;
+set_real_ip_from 2a0b:f4c0:16c:3::1;
+set_real_ip_from 2a0b:f4c0:16c:4::1;
+set_real_ip_from 2a0b:f4c0:16c:5::1;
+set_real_ip_from 2a0b:f4c0:16c:6::1;
+set_real_ip_from 2a0b:f4c0:16c:7::1;
+set_real_ip_from 2a0b:f4c0:16c:8::1;
+set_real_ip_from 2a0b:f4c0:16c:9::1;
 set_real_ip_from 2a0b:f4c2:1::129;
 set_real_ip_from 2a0b:f4c2:1::130;
 set_real_ip_from 2a0b:f4c2:1::132;
@@ -547,6 +563,7 @@ set_real_ip_from 2a0e:97c0:3e3:460:1337:b00b:1337:1;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b01b:1337:2;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b02b:1337:3;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b03b:1337:4;
+set_real_ip_from 2a0e:97c0:3e3:460:1337:b04b:1337:5;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b05b:1337:6;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b10b:1337:8;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b20b:1337:9;
@@ -632,7 +649,6 @@ set_real_ip_from 2a12:a800:2:1:45:141:215:62;
 set_real_ip_from 2a12:a800:2:1:45:141:215:63;
 set_real_ip_from 2a12:a800:2:1:45:141:215:80;
 set_real_ip_from 2a12:a800:2:1:45:141:215:88;
-set_real_ip_from 2a12:a800:2:1:45:141:215:90;
 set_real_ip_from 2a12:a800:2:1:45:141:215:95;
 set_real_ip_from 2a12:a800:2:1:45:141:215:97;
 set_real_ip_from 2a12:a800:2:1:45:80:158:167;
