--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -773,6 +773,7 @@ deny 212.21.66.6;
 deny 212.38.189.186;
 deny 212.69.167.80;
 deny 212.73.134.204;
+deny 212.95.50.77;
 deny 216.239.90.19;
 deny 216.73.159.101;
 deny 216.73.159.75;
@@ -834,7 +835,6 @@ deny 23.191.200.16;
 deny 23.191.200.17;
 deny 23.191.200.18;
 deny 23.191.200.19;
-deny 23.191.200.2;
 deny 23.191.200.20;
 deny 23.191.200.21;
 deny 23.191.200.22;
@@ -845,6 +845,7 @@ deny 23.191.200.26;
 deny 23.191.200.27;
 deny 23.191.200.28;
 deny 23.191.200.29;
+deny 23.191.200.3;
 deny 23.191.200.30;
 deny 23.191.200.31;
 deny 23.191.200.4;
@@ -1095,6 +1096,7 @@ deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:82c0::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -1322,7 +1324,6 @@ deny 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 deny 2a0e:97c0:3e3:a0e::1;
 deny 2a0e:97c0:3e3:b6::1;
 deny 2a0e:97c0:3ea:882::1;
-deny 2a0e:97c0:470::28;
 deny 2a0e:97c0:470::30;
 deny 2a0e:b107:dd0::3:fa35:9316;
 deny 2a0e:bfc0:0:11::796d;
@@ -1582,6 +1583,7 @@ deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.253.247.27;
 deny 5.255.100.224;
+deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.235;
@@ -1732,7 +1734,6 @@ deny 93.123.109.116;
 deny 93.123.12.112;
 deny 93.185.165.211;
 deny 93.88.75.35;
-deny 93.90.74.28;
 deny 93.90.74.29;
 deny 93.95.227.37;
 deny 93.95.228.125;
