--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -125,6 +125,7 @@ deny 109.71.252.88;
 deny 109.71.252.97;
 deny 114.172.205.8;
 deny 114.35.245.150;
+deny 118.163.74.160;
 deny 118.193.64.139;
 deny 121.78.28.166;
 deny 123.253.35.32;
@@ -729,6 +730,7 @@ deny 2001:67c:e60:c0c:192:42:116:217;
 deny 2001:67c:e60:c0c:192:42:116:218;
 deny 2001:67c:e60:c0c:192:42:116:219;
 deny 2001:b011:4006:545c::b;
+deny 2001:b030:2422::7234;
 deny 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 deny 2001:bf0:666::666;
 deny 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -822,7 +824,6 @@ deny 23.137.253.254;
 deny 23.137.253.27;
 deny 23.137.254.244;
 deny 23.151.8.8;
-deny 23.155.8.104;
 deny 23.184.48.13;
 deny 23.184.48.78;
 deny 23.191.200.10;
@@ -848,6 +849,7 @@ deny 23.191.200.29;
 deny 23.191.200.3;
 deny 23.191.200.30;
 deny 23.191.200.31;
+deny 23.191.200.4;
 deny 23.191.200.5;
 deny 23.191.200.6;
 deny 23.191.200.7;
@@ -879,7 +881,6 @@ deny 2600:3c03::f03c:95ff:fe5d:562;
 deny 2600:3c04::f03c:95ff:fe41:d42c;
 deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2600:3c0b::f03c:95ff:fefa:bdff;
-deny 2602:2e5::104;
 deny 2602:f6f6:2:2634::1;
 deny 2602:f6f6:2:3637::1;
 deny 2602:f6f6:2:90f1::1;
@@ -1323,6 +1324,7 @@ deny 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 deny 2a0e:97c0:3e3:a0e::1;
 deny 2a0e:97c0:3e3:b6::1;
 deny 2a0e:97c0:3ea:882::1;
+deny 2a0e:97c0:470::28;
 deny 2a0e:97c0:470::30;
 deny 2a0e:b107:dd0::3:fa35:9316;
 deny 2a0e:bfc0:0:11::796d;
@@ -1713,6 +1715,7 @@ deny 93.123.109.116;
 deny 93.123.12.112;
 deny 93.185.165.211;
 deny 93.88.75.35;
+deny 93.90.74.28;
 deny 93.90.74.29;
 deny 93.95.227.37;
 deny 93.95.228.125;
