--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -156,6 +156,7 @@ allow 149.56.44.47;
 allow 152.32.206.127;
 allow 152.53.106.19;
 allow 152.53.133.14;
+allow 152.53.184.161;
 allow 152.53.53.243;
 allow 154.16.116.61;
 allow 154.26.159.157;
@@ -222,6 +223,7 @@ allow 176.65.149.87;
 allow 176.65.149.88;
 allow 176.65.149.96;
 allow 176.97.114.202;
+allow 177.93.140.66;
 allow 178.17.170.144;
 allow 178.17.170.23;
 allow 178.17.171.102;
@@ -824,6 +826,7 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
+allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -835,8 +838,9 @@ allow 23.191.200.27;
 allow 23.191.200.28;
 allow 23.191.200.29;
 allow 23.191.200.3;
+allow 23.191.200.30;
 allow 23.191.200.31;
-allow 23.191.200.4;
+allow 23.191.200.5;
 allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
@@ -1002,10 +1006,12 @@ allow 2620:7:6001::120;
 allow 2620:95:4007::111;
 allow 27.255.75.198;
 allow 2800:ba0:6:c1::4858;
+allow 2803:6d90:111::67;
 allow 2803:cd80:2000:10::db8f:5f60;
 allow 2a00:16b0:1:243::7012:3117;
 allow 2a00:16b0:1:243::7012:a500;
 allow 2a00:16b0:1:243::7012:e817;
+allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
@@ -1104,6 +1110,7 @@ allow 2a06:1700:0:16::1;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:47::166;
 allow 2a06:1700:0:50::11;
+allow 2a06:1700:1:109::209:a94;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
@@ -1123,6 +1130,7 @@ allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
 allow 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
+allow 2a0a:4cc0:c1:12a1:58f9:e7ff:fe0b:b0f1;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:11::1;
@@ -1413,6 +1421,7 @@ allow 37.187.5.192;
 allow 37.221.208.71;
 allow 37.228.129.128;
 allow 37.228.129.153;
+allow 37.228.129.162;
 allow 37.228.129.189;
 allow 37.228.129.5;
 allow 37.228.129.63;
@@ -1655,6 +1664,7 @@ allow 87.118.116.12;
 allow 87.118.116.90;
 allow 87.118.122.30;
 allow 87.118.122.51;
+allow 87.120.254.132;
 allow 88.151.194.24;
 allow 88.80.20.86;
 allow 88.80.26.2;
@@ -1707,7 +1717,6 @@ allow 94.102.51.15;
 allow 94.131.2.131;
 allow 94.142.241.194;
 allow 94.142.244.16;
-allow 94.156.152.234;
 allow 94.16.115.121;
 allow 94.16.121.91;
 allow 94.230.208.147;
